--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>JS homework</h1>
+    <h1>JS homework 3</h1>
     <script type="module" src="./js/task-1.js"></script>
     <script type="module" src="./js/task-2.js"></script>
     <script type="module" src="./js/task-3.js"></script>
-    <script type="module" src="./js/task-4.js"></script>
   </body>
 </html>
